--- a/propertyRental/src/main/webapp/app/src/modules/myProperties/partials/unavailableDates.html
+++ b/propertyRental/src/main/webapp/app/src/modules/myProperties/partials/unavailableDates.html
@@ -4,4 +4,4 @@
 	update-un-dates="updateUnDates(dates)"
 	unavailable-dates="currentUnDates"
 	booked-dates="currentBookedDates"></my-datepicker>
-<button class="btn btn-default col-md-3" ng-disabled="datesUpdated" ng-click="sendUnDates()">Save unavailable dates</button>
+<button class="btn btn-success col-md-3" ng-disabled="datesUpdated" ng-click="sendUnDates()">Save unavailable dates</button>
