--- a/propertyRental/src/main/webapp/app/src/modules/myProperties/partials/updateProperty.html
+++ b/propertyRental/src/main/webapp/app/src/modules/myProperties/partials/updateProperty.html
@@ -120,7 +120,7 @@
 			
 		<div class="row">
 			<div class="form-group">
-				<input type="submit" value="Edit property" class="btn btn-default" ng-disabled="propertyForm.$invalid"/>
+				<input type="submit" value="Edit property" class="btn btn-success" ng-disabled="updateButtonDisabled(propertyForm)"/>
 			</div>
 		</div>
 			
