--- a/propertyRental/src/main/webapp/app/src/modules/showProperty/partials/showProperty.html
+++ b/propertyRental/src/main/webapp/app/src/modules/showProperty/partials/showProperty.html
@@ -54,7 +54,7 @@
 						<count-booking-price ng-if="property.$resolved && property.userAccount.username != currentUser" night-price="property.pricePerNight" check-in="booking.checkIn" check-out="booking.checkOut"></count-booking-price>
 					</div>
 					<div class="col-md-1 col-xs-12">
-						<input type="submit" value="Book apartment" class="btn btn-default" ng-show="isLoggedIn() && property.userAccount.username != currentUser"/>
+						<input type="submit" value="Book apartment" class="btn btn-success" ng-show="isLoggedIn() && property.userAccount.username != currentUser"/>
 					</div>
 				</form>
 			</div>
